feat(homepage): add details to homepage, LI badge

--- a/index.html
+++ b/index.html
@@ -24,19 +24,58 @@
 		</nav>
 
     <div id="consulting" class="col s12">
-      <h5 class="center-align">
+      <!--<h5 class="center-align">
         Spaans Software Consulting
-      </h5>
+      </h5>-->
+      <p>With 15 years of industry experience across many domains and technologies, I can help with</p>
       <div class="row">
-        <div class="col s12 m6">
-          <div class="card large">
+        <div class="col s12 m4">
+          <div class="card">
             <div class="card-content">
-              <span class="card-title">Consulting Services</span>
+              <span class="card-title">Software Architecture</span>
+              <ul class="collection">
+              	<li class="collection-item">software architecture</li>
+                <li class="collection-item">code review</li>
+                <li class="collection-item">deployment pipelines</li>
+                <li class="collection-item">git workflows</li>
+              </ul>
               <p>Fixed-rate pricing for software development, architecture planning, code review, hiring, and more.</p>
             </div>
           </div>
         </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">Code Reviews</span>
+              <p>With 15 years of industry experience across many domains and technologies, I can help with</p>
+              <ul class="collection">
+              	<li class="collection-item">software architecture</li>
+                <li class="collection-item">code review</li>
+                <li class="collection-item">deployment pipelines</li>
+                <li class="collection-item">git workflows</li>
+              </ul>
+              <p>Fixed-rate pricing for software development, architecture planning, code review, hiring, and more.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">Grow Teams</span>
+              <ul class="collection">
+              	<li class="collection-item">interviews</li>
+                <li class="collection-item">sourcing candidates</li>
+                <li class="collection-item">onboarding and training</li>
+                <li class="collection-item">career guidance and mentorship</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
+      <ul class="collection">
+        <li class="collection-item">Fixed-price for software development, architecture planning, code review, hiring, and more.</li>
+        <li class="collection-item">$6,000/week ($150/hour)</li>
+      </ul>
 		</div>
 
 		<div id="resume" class="col s10 offset-s1">
@@ -60,11 +99,15 @@
       <p>
         <a href="https://calendly.com/kspaans/30min">Calendly</a>
 			</p>
+      <div class="badge-base LI-profile-badge" data-locale="en_CA" data-size="small" data-theme="light" data-type="VERTICAL" data-vanity="kspaans" data-version="v1">
+      	<a class="badge-base__link LI-simple-link" href="https://ca.linkedin.com/in/kspaans?trk=profile-badge">LinkedIn</a>
+      </div>
 		</div>
 	</div>
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 	<script>
 		M.AutoInit();
 	</script>
