feat(rate): adjust rate

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <ul class="collection">
         <li class="collection-item">Fixed-price for software development, architecture planning, code review, hiring, and more.</li>
-        <li class="collection-item">$6,000/week ($150/hour)</li>
+        <li class="collection-item">Small consultations and engagements billed at $7,500/week (or $200/hour)</li>
       </ul>
 		</div>
 
