--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         .highlight {
-            background-color: #add8e6;
+            font-weight: bold;
             padding: 2px 4px;
         }
 
@@ -81,7 +81,7 @@
 
     <p>
         I offer outcome-driven, fixed-price software delivery engagements, and
-        high-impact consulting services at $7,500/week or $200/hour.
+        high-impact consulting services.
     </p>
 
     <ul>
@@ -113,8 +113,8 @@
 
     <div class="testimonial">
         "Having Kyle review our serverless architecture saved us weeks of
-        planning and helped us scale
-        to handle 10x the load without major incidents."
+        planning and helped us scale to handle 10x the load without major
+        incidents."
         <br>
         — CTO, Funded SaaS Startup
     </div>
@@ -128,8 +128,8 @@
 
     <ol>
         <li>
-            We have a brief call to discuss your needs and determine if we're a
-            good fit
+            We have a brief, 30 minute call to discuss your needs and determine
+            if we're a good fit
         </li>
         <li>
             I provide a clear proposal with objectives, deliverables, and
@@ -148,7 +148,9 @@
     <p>
         Payment options are flexible, and for the right project I'm willing to
         accept equity-based compensation. All work comes with a zero-bugs
-        satisfaction guarantee.
+        satisfaction guarantee. If necessary I also offer weekly or hourly
+        engagements at CAD $7,500/week or $200/hour (plus tax, where
+        applicable).
     </p>
 
     <h2>Other Resources</h2>
